--- a/DSA/todo.txt
+++ b/DSA/todo.txt
@@ -1,8 +1,7 @@
 View the Queue videos again and do their practicals
-    Using Arrays        (Started but not completed)
-    Circular Queue
 
     using Linked List
+    Double Ended Queue
 
 Sorting Algorithms
 
@@ -10,14 +9,17 @@ Sorting Algorithms
 ## Start C programming series from vid 52
 # Python OOPs + Revise some other previous concepts
 
+cd "d:\Code Playground\C-Programming\DSA\" ; if ($?) { gcc Sort_Tracker_Insertion_Sort.c -o Sort_Tracker_Insertion_Sort -lpsapi} ; if ($?) { .\Sort_Tracker_Insertion_Sort }
+
+cd "d:\Code Playground\C-Programming\DSA\" ; if ($?) { gcc Sort_Tracker_Bubble_Sort.c -o Sort_Tracker_Bubble_Sort -lpsapi} ; if ($?) { .\Sort_Tracker_Bubble_Sort }
 
 
 Queue using Arrays functions
     Display()
     isEmpty()
     isFull()
-    push()
-    pop()
+    enqueue()
+    dequeue()
     peek()
     queue_front()
     queue_rear()
