--- a/DSA/todo.txt
+++ b/DSA/todo.txt
@@ -1,10 +1,9 @@
-Sorting Algorithms
-    Iterated Quick Sort
-    merge sort
-
 Make a sorting Algorithm which works on the principle of "extracting minima"
 
-Add "authors" in the readme.md
+#Custom Algorithm
+    Take the array
+    Make a BST for the array by repetitevely inserting into tree
+    Do the in-order traversal
 
 Sort Trackers
     Merge sort
@@ -17,7 +16,6 @@ Sort Trackers
     Do DSA in C 
     If mood for revision, do in C++ not in C
 
-## Start C programming series from vid 52
 # Python OOPs + Revise some other previous concepts
 
 cd "d:\Code Playground\C-Programming\DSA\" ; if ($?) { gcc Sort_Tracker_Insertion_Sort.c -o Sort_Tracker_Insertion_Sort -lpsapi} ; if ($?) { .\Sort_Tracker_Insertion_Sort }
