Cleanup in AVL_Trees file, custom_sort algorithm implemented, and sort trackers for merge and quick sort algorithms implemented

--- a/DSA/todo.txt
+++ b/DSA/todo.txt
@@ -10,6 +10,8 @@ Sort Trackers
     quick sort
     count sort
 
+Reversing an array
+
 *** create a new algorithm for "check_bst" (create the inorder array and then find whether it is in ascending order or not, simple!)
 
 ### Workflow?
