--- a/DSA/todo.txt
+++ b/DSA/todo.txt
@@ -1,4 +1,6 @@
 Book problems (Maximum subarray problem)
 Finding top k elements in an array (Heaps)
 
+Heap data structure
+
 cd "d:\Code Playground\C-Programming\DSA\" ; if ($?) { gcc Sort_Tracker_Insertion_Sort.c -o Sort_Tracker_Insertion_Sort -lpsapi} ; if ($?) { .\Sort_Tracker_Insertion_Sort }
