Heaps data structure algorithms implemented

--- a/DSA/todo.txt
+++ b/DSA/todo.txt
@@ -2,5 +2,6 @@ Book problems (Maximum subarray problem)
 Finding top k elements in an array (Heaps)
 
 Heap data structure
+- Level order traversal of a heap
 
 cd "d:\Code Playground\C-Programming\DSA\" ; if ($?) { gcc Sort_Tracker_Insertion_Sort.c -o Sort_Tracker_Insertion_Sort -lpsapi} ; if ($?) { .\Sort_Tracker_Insertion_Sort }
